# pixelprep

./: .env.example  .gitignore  AUTHENTICATION.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_STATUS_v2.1.0.md  PHASE3_PREPARATION.md  PRODUCTION_ENV_SETUP.md  README.md  REFACTOR.md  end_to_end_test.py  justfile  package-lock.json  phase2_validation.py  pyproject.toml  test-auth-flow.md  test_new_features.md
.github/workflows/: deploy.yml
archive_phase2_docs/: README.md
backend/: headers.txt
backend/src/api/: auth--test.py  auth.py  main--test.py  main.py  (+2 more)
backend/test_images/: metadata.json
config/: README.md
config/environments/: .env.example
docs/: CLAUDE.md  PHASE2_SETUP.md  PROJECT_STRUCTURE.md  README.md  phase2_validation.py
docs/architecture/: AUTHENTICATION.md  AUTH_TOGGLE_FEATURE.md  DESIGN_SYSTEM.md
docs/archive/: App-Simplified.tsx
docs/deployment/: DEPLOYMENT.md  PRODUCTION_ENV_SETUP.md  URGENT_SECURITY_FIXES.md
docs/testing/: QUICK_TEST_GUIDE.md  TESTING_GUIDE.md  TESTING_v2.1.0.md
docs/ux/: ACTUAL_UX_FIXES_IMPLEMENTED.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  test_ux_fixes.html  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  types.ts
scripts/: download_test_images.py  feature-flag-manager.py  monitoring-setup.py  phase2_validation.py  rollback-procedures.py  test_all_presets.py  test_optimization.py
sharp-poc/: COMPLETE_TEST_RESULTS.md  EXIF_TEST_RESULTS.md  README.md  package-lock.json  package.json  tsconfig.json
sharp-poc/src/: processors.ts  sharp-utils.ts  test.ts
(+56 files in other folders)
